[package]
name = "rust-slack-bot"
version = "0.1.0"
authors = ["Justin Barclay <justincbarclay@gmail.com>"]

[dependencies]
futures = "0.1.14"
hyper = "0.11.2"
tokio-core =  "0.1.11"
pretty_env_logger = "0.2.2"
rand = "0.5.1"
hyper-tls = "0.1.3"
serde_json = "1.0"
serde_derive = "1.0.55"
serde = "1.0.55"
regex = "1.0.0"